--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
   "homepage": "https://github.com/edimdendidiwangga/udemy-nodejs-maximilian#readme",
   "devDependencies": {
     "nodemon": "^2.0.3"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
